<resources>
    <string name="app_name">BR Player</string>
    <string name="cd_play" translatable="false">Play</string>
    <string name="notification_channel_name" translatable="false">Music Channel</string><string name="notification_channel_description" translatable="false">Shows the currently playing music</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_radio">Radio</string>
    <string name="nav_library">Your Library</string>
    <!--Player UI-->
    <string name="all_tracks">All Tracks</string>
    <string name="favorites">Favorites</string>
    <string name="recently_added">Recently Added</string>
    <string name="scan_tracks">Searching for tracks on device</string>
    <string name="no_tracks_found">No tracks Found :(</string>
    <string name="permission_request">Grant access to local media</string>
    <string name="permission_to_read_media">App needs permission to your media in order to be able to play Music.</string>

    <string name="change_playlist">Change Playlist</string>
    <string name="next_track">Next Track:</string>

    <!--    Add to playlist -->
    <string name="track_added_to_playlist">Track added to %1$s playlist</string>
    <string name="track_already_added_to_that_playlist">Track already added to that playlist</string>
    <!--    Settings-->
    <string name="settings">Settings</string>

    <!--Cloud related Strings-->
    <string name="connect_cloud">Connect your cloud storage</string>
    <string name="google_drive" translatable="false">Google Drive</string>
    <string name="dropbox" translatable="false">DropBox</string>
    <string name="yandex_disk" translatable="false">Yandex Disk</string>
    <string name="microsoft_onedrive" translatable="false">Microsoft OneDrive</string>

    <!--    Player controls-->
    <string name="previous_track_button">Previous Track</string>
    <string name="next_track_button">Next Track</string>
    <string name="shuffle">Shuffle</string>


    <!--    Menu Items -->
    <string name="download">Download</string>
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="add_tracks">Add tracks</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_playlist_variant">Add to playlist…</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="go_to_album">Go to album</string>
    <string name="this_track_is_now_playing">This track is now playing</string>
    <!--    Rename Playlist -->
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="cancel">Cancel</string>


    <!--    Detail Screen-->
    <string name="tracks">Tracks: %1$s</string>
    <string name="albums_tracks">"Albums: %1$s, Tracks: %2$s "</string>
    <string name="album_by">Album by %1$s</string>

    <!--  DetailContentCardItem -->
    <string name="tracks_size">Tracks: %1$s</string>

    <!--EditPlaylist-->
    <string name="drag_handle" translatable="false">Drag handle</string>
    <string name="delete_from_playlist">Delete from playlist</string>
    <string name="reorder_or_delete_tracks">Reorder or delete tracks</string>
    <!--    Library -->
    <string name="by_author">by %1$s</string>
    <string name="tracks_from_albums">%1$s tracks from %2$s albums</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="playlist_already_exists">This name is already taken</string>
    <string name="your_collection">Your Collection</string>

    <!--    Search -->
    <string name="search_for_tracks">Search for tracks</string>
    <string name="search_for_radiostation">Station name or county</string>
    <!--Track parameters-->
    <string name="unknown_track">Unknown Track</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_genre">Unknown genre</string>
    <string name="year_unknown">Year unknown</string>


    <!--    Detail Screen -->
    <string name="releases">Releases</string>


    <!--Song Description-->
    <string name="from_album_by">From album %1$s by %2$s</string>
    <string name="cd_back">Back</string>
    <string name="choose_tracks_to_add">Choose tracks to add</string>

    <string name="default_web_client_id" translatable="false">169741771339-heut6pv3h44lvb591sk0d518agi8nfpd.apps.googleusercontent.com</string>
    <string name="web_client_secret" translatable="false">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</string>
    <string name="mix">Mix</string>
    <string name="shuffled">%1$s (Shuffled)</string>

    <!--Radio Description-->
    <string name="live_radio">Live Radio</string>
    <string name="all_radio_stations">All Radio Stations</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="recently_changed">Recently changed</string>
    <string name="general">General</string>
    <string name="theme">Theme: %1$s</string>
    <string name="color_palette">Color palette: %1$s</string>
    <string name="match_system">Match system</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="purple">purple</string>
    <string name="green">green</string>
    <string name="orange">orange</string>
    <string name="blue">blue</string>
</resources>